<resources>
    <string name="app_name">SNN</string>
    <string name="title_home">Home</string>
    <string name="title_add">Add</string>
    <string name="title_remove">Remove</string>
    <string name="title_killed">Killed</string>
    <string name="title_score">Scores</string>
    <string name="enter_name_add">Enter Name to Add:</string>
    <string name="enter_name_remove">Enter Name to Remove from Game:</string>
    <string name="enter_name_killed">Enter Name who got Killed:</string>
    <string name="scoreEmpty">Start adding Players</string>
    <string name="editAddHint">Enter Name</string>
    <string name="name">Name</string>
    <string name="score">Score</string>
    <string name="death">Death</string>
    <string name="target">target</string>
</resources>
