<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.snn.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.example.snn.ui.add.AddFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/navigation_remove"
        android:name="com.example.snn.ui.remove.RemoveFragment"
        android:label="@string/title_remove"
        tools:layout="@layout/fragment_remove" />

    <fragment
        android:id="@+id/navigation_killed"
        android:name="com.example.snn.ui.killed.KilledFragment"
        android:label="@string/title_killed"
        tools:layout="@layout/fragment_killed" />
</navigation>
